parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    FALSE
    OBJECT
    TLIST
    TRUE

Grammar

Rule 0     S' -> capi
Rule 1     capi -> global recfunc MAIN COLON LEFTKEY start run RIGHTKEY SEMICOLON
Rule 2     capi -> recfunc MAIN COLON LEFTKEY start run RIGHTKEY SEMICOLON
Rule 3     capi -> global MAIN COLON LEFTKEY start run RIGHTKEY SEMICOLON
Rule 4     capi -> MAIN COLON LEFTKEY start run RIGHTKEY SEMICOLON
Rule 5     global -> GLOBAL COLON LEFTKEY vars RIGHTKEY SEMICOLON
Rule 6     start -> VOID FUNC START startscope_action LEFTPAR RIGHTPAR block
Rule 7     run -> VOID FUNC RUN startscope_action LEFTPAR RIGHTPAR block
Rule 8     vars -> VAR recids COLON type EQUAL expression SEMICOLON vars
Rule 9     vars -> VAR recids COLON type EQUAL expression SEMICOLON
Rule 10    vars -> VAR recids COLON type SEMICOLON vars
Rule 11    vars -> VAR recids COLON type SEMICOLON
Rule 12    recids -> ID
Rule 13    recids -> ID COMMA recids
Rule 14    block -> COLON LEFTKEY recstatement RIGHTKEY SEMICOLON
Rule 15    block -> COLON LEFTKEY RIGHTKEY SEMICOLON
Rule 16    recstatement -> statement recstatement
Rule 17    recstatement -> statement
Rule 18    statement -> assign SEMICOLON
Rule 19    statement -> condition
Rule 20    statement -> vars
Rule 21    statement -> loop
Rule 22    statement -> write SEMICOLON
Rule 23    statement -> return SEMICOLON
Rule 24    statement -> functioncall SEMICOLON
Rule 25    statement -> nestedassign SEMICOLON
Rule 26    statement -> specialfunction SEMICOLON
Rule 27    specialfunction -> draw
Rule 28    specialfunction -> size
Rule 29    specialfunction -> head
Rule 30    specialfunction -> tail
Rule 31    specialfunction -> last
Rule 32    specialfunction -> set_title
Rule 33    specialfunction -> set_dimension
Rule 34    specialfunction -> set_color
Rule 35    specialfunction -> create_object
Rule 36    specialfunction -> create_text
Rule 37    draw -> DRAW LEFTPAR recfuncexp RIGHTPAR
Rule 38    size -> SIZE LEFTPAR RIGHTPAR
Rule 39    head -> HEAD LEFTPAR RIGHTPAR
Rule 40    tail -> TAIL LEFTPAR RIGHTPAR
Rule 41    last -> LAST LEFTPAR RIGHTPAR
Rule 42    set_title -> SET_TITLE LEFTPAR expression RIGHTPAR
Rule 43    set_dimension -> SET_DIMENSION LEFTPAR expression COMMA expression RIGHTPAR
Rule 44    set_color -> SET_COLOR LEFTPAR expression COMMA expression COMMA expression RIGHTPAR
Rule 45    create_object -> CREATE_OBJECT LEFTPAR recfuncexp RIGHTPAR
Rule 46    create_text -> CREATE_TEXT LEFTPAR recfuncexp RIGHTPAR
Rule 47    assign -> ID assign_action1 EQUAL assign_action2 expression
Rule 48    assign_action1 -> <empty>
Rule 49    assign_action2 -> <empty>
Rule 50    condition -> IF startscope_action LEFTPAR expression condition_action1 RIGHTPAR block condition_action2
Rule 51    condition -> IF startscope_action LEFTPAR expression condition_action1 RIGHTPAR block ELSE condition_action3 block condition_action2
Rule 52    condition_action1 -> <empty>
Rule 53    condition_action2 -> <empty>
Rule 54    condition_action3 -> <empty>
Rule 55    loop -> for
Rule 56    loop -> while
Rule 57    for -> FOR startscope_action LEFTPAR assign SEMICOLON expression SEMICOLON assign SEMICOLON RIGHTPAR block
Rule 58    while -> WHILE startscope_action LEFTPAR expression RIGHTPAR block
Rule 59    function -> type FUNC ID startscope_action LEFTPAR recparams RIGHTPAR block
Rule 60    function -> type FUNC ID startscope_action LEFTPAR RIGHTPAR block
Rule 61    function -> VOID FUNC ID startscope_action LEFTPAR recparams RIGHTPAR block
Rule 62    function -> VOID FUNC ID startscope_action LEFTPAR RIGHTPAR block
Rule 63    startscope_action -> <empty>
Rule 64    recparams -> ID COLON type
Rule 65    recparams -> ID COLON type COMMA recparams
Rule 66    recfunc -> function recfunc
Rule 67    recfunc -> function
Rule 68    write -> PRINT LEFTPAR recwrite RIGHTPAR
Rule 69    recwrite -> expression action_recwrite_exp COMMA recwrite
Rule 70    recwrite -> STRING action_recwrite_cte COMMA recwrite
Rule 71    recwrite -> expression action_recwrite_exp
Rule 72    recwrite -> STRING action_recwrite_cte
Rule 73    action_recwrite_exp -> <empty>
Rule 74    action_recwrite_cte -> <empty>
Rule 75    return -> RETURN expression
Rule 76    functioncall -> ID LEFTPAR recfuncexp RIGHTPAR
Rule 77    functioncall -> ID LEFTPAR RIGHTPAR
Rule 78    recfuncexp -> expression COMMA recfuncexp
Rule 79    recfuncexp -> expression
Rule 80    expression -> exp RELOP relop_action1 exp relop_action2
Rule 81    expression -> exp LOGIC logic_action1 exp logic_action2
Rule 82    expression -> exp
Rule 83    relop_action1 -> <empty>
Rule 84    relop_action2 -> <empty>
Rule 85    logic_action1 -> <empty>
Rule 86    logic_action2 -> <empty>
Rule 87    exp -> term exp_action recexp
Rule 88    exp -> term exp_action
Rule 89    exp_action -> <empty>
Rule 90    recexp -> EX add_operator exp
Rule 91    term -> factor term_action recterm
Rule 92    term -> factor term_action
Rule 93    term_action -> <empty>
Rule 94    recterm -> TERMS add_operator term
Rule 95    add_operator -> <empty>
Rule 96    factor -> LEFTPAR expression RIGHTPAR
Rule 97    factor -> EX cte
Rule 98    factor -> cte
Rule 99    type -> primitivetype
Rule 100   type -> LIST LEFTHAT primitivetype RIGHTHAT
Rule 101   primitivetype -> TINT
Rule 102   primitivetype -> TFLOAT
Rule 103   primitivetype -> TSTRING
Rule 104   primitivetype -> TBOOL
Rule 105   primitivetype -> TOBJECT
Rule 106   listaccess -> ID LEFTBRACKET expression RIGHTBRACKET SEMICOLON
Rule 107   nestedvalue -> ID DOT ID
Rule 108   nestedassign -> nestedvalue EQUAL expression
Rule 109   cte -> STRING
Rule 110   cte -> ID
Rule 111   cte -> INT
Rule 112   cte -> FLOAT
Rule 113   cte -> BOOL
Rule 114   cte -> nestedvalue
Rule 115   cte -> functioncall
Rule 116   cte -> listaccess
Rule 117   cte -> specialfunction

Terminals, with rules where they appear

BOOL                 : 113
COLON                : 1 2 3 4 5 8 9 10 11 14 15 64 65
COMMA                : 13 43 44 44 65 69 70 78
COMMENT              : 
CREATE_OBJECT        : 45
CREATE_TEXT          : 46
DOT                  : 107
DRAW                 : 37
ELSE                 : 51
EQUAL                : 8 9 47 108
EX                   : 90 97
FALSE                : 
FLOAT                : 112
FOR                  : 57
FUNC                 : 6 7 59 60 61 62
GLOBAL               : 5
HEAD                 : 39
ID                   : 12 13 47 59 60 61 62 64 65 76 77 106 107 107 110
IF                   : 50 51
INT                  : 111
LAST                 : 41
LEFTBRACKET          : 106
LEFTHAT              : 100
LEFTKEY              : 1 2 3 4 5 14 15
LEFTPAR              : 6 7 37 38 39 40 41 42 43 44 45 46 50 51 57 58 59 60 61 62 68 76 77 96
LIST                 : 100
LOGIC                : 81
MAIN                 : 1 2 3 4
OBJECT               : 
PRINT                : 68
RELOP                : 80
RETURN               : 75
RIGHTBRACKET         : 106
RIGHTHAT             : 100
RIGHTKEY             : 1 2 3 4 5 14 15
RIGHTPAR             : 6 7 37 38 39 40 41 42 43 44 45 46 50 51 57 58 59 60 61 62 68 76 77 96
RUN                  : 7
SEMICOLON            : 1 2 3 4 5 8 9 10 11 14 15 18 22 23 24 25 26 57 57 57 106
SET_COLOR            : 44
SET_DIMENSION        : 43
SET_TITLE            : 42
SIZE                 : 38
START                : 6
STRING               : 70 72 109
TAIL                 : 40
TBOOL                : 104
TERMS                : 94
TFLOAT               : 102
TINT                 : 101
TLIST                : 
TOBJECT              : 105
TRUE                 : 
TSTRING              : 103
VAR                  : 8 9 10 11
VOID                 : 6 7 61 62
WHILE                : 58
error                : 

Nonterminals, with rules where they appear

action_recwrite_cte  : 70 72
action_recwrite_exp  : 69 71
add_operator         : 90 94
assign               : 18 57 57
assign_action1       : 47
assign_action2       : 47
block                : 6 7 50 51 51 57 58 59 60 61 62
capi                 : 0
condition            : 19
condition_action1    : 50 51
condition_action2    : 50 51
condition_action3    : 51
create_object        : 35
create_text          : 36
cte                  : 97 98
draw                 : 27
exp                  : 80 80 81 81 82 90
exp_action           : 87 88
expression           : 8 9 42 43 43 44 44 44 47 50 51 57 58 69 71 75 78 79 96 106 108
factor               : 91 92
for                  : 55
function             : 66 67
functioncall         : 24 115
global               : 1 3
head                 : 29
last                 : 31
listaccess           : 116
logic_action1        : 81
logic_action2        : 81
loop                 : 21
nestedassign         : 25
nestedvalue          : 108 114
primitivetype        : 99 100
recexp               : 87
recfunc              : 1 2 66
recfuncexp           : 37 45 46 76 78
recids               : 8 9 10 11 13
recparams            : 59 61 65
recstatement         : 14 16
recterm              : 91
recwrite             : 68 69 70
relop_action1        : 80
relop_action2        : 80
return               : 23
run                  : 1 2 3 4
set_color            : 34
set_dimension        : 33
set_title            : 32
size                 : 28
specialfunction      : 26 117
start                : 1 2 3 4
startscope_action    : 6 7 50 51 57 58 59 60 61 62
statement            : 16 17
tail                 : 30
term                 : 87 88 94
term_action          : 91 92
type                 : 8 9 10 11 59 60 64 65
vars                 : 5 8 10 20
while                : 56
write                : 22

Parsing method: LALR

state 0

    (0) S' -> . capi
    (1) capi -> . global recfunc MAIN COLON LEFTKEY start run RIGHTKEY SEMICOLON
    (2) capi -> . recfunc MAIN COLON LEFTKEY start run RIGHTKEY SEMICOLON
    (3) capi -> . global MAIN COLON LEFTKEY start run RIGHTKEY SEMICOLON
    (4) capi -> . MAIN COLON LEFTKEY start run RIGHTKEY SEMICOLON
    (5) global -> . GLOBAL COLON LEFTKEY vars RIGHTKEY SEMICOLON
    (66) recfunc -> . function recfunc
    (67) recfunc -> . function
    (59) function -> . type FUNC ID startscope_action LEFTPAR recparams RIGHTPAR block
    (60) function -> . type FUNC ID startscope_action LEFTPAR RIGHTPAR block
    (61) function -> . VOID FUNC ID startscope_action LEFTPAR recparams RIGHTPAR block
    (62) function -> . VOID FUNC ID startscope_action LEFTPAR RIGHTPAR block
    (99) type -> . primitivetype
    (100) type -> . LIST LEFTHAT primitivetype RIGHTHAT
    (101) primitivetype -> . TINT
    (102) primitivetype -> . TFLOAT
    (103) primitivetype -> . TSTRING
    (104) primitivetype -> . TBOOL
    (105) primitivetype -> . TOBJECT

    MAIN            shift and go to state 4
    GLOBAL          shift and go to state 5
    VOID            shift and go to state 8
    LIST            shift and go to state 10
    TINT            shift and go to state 11
    TFLOAT          shift and go to state 12
    TSTRING         shift and go to state 13
    TBOOL           shift and go to state 14
    TOBJECT         shift and go to state 15

    capi                           shift and go to state 1
    global                         shift and go to state 2
    recfunc                        shift and go to state 3
    function                       shift and go to state 6
    type                           shift and go to state 7
    primitivetype                  shift and go to state 9

state 1

    (0) S' -> capi .



state 2

    (1) capi -> global . recfunc MAIN COLON LEFTKEY start run RIGHTKEY SEMICOLON
    (3) capi -> global . MAIN COLON LEFTKEY start run RIGHTKEY SEMICOLON
    (66) recfunc -> . function recfunc
    (67) recfunc -> . function
    (59) function -> . type FUNC ID startscope_action LEFTPAR recparams RIGHTPAR block
    (60) function -> . type FUNC ID startscope_action LEFTPAR RIGHTPAR block
    (61) function -> . VOID FUNC ID startscope_action LEFTPAR recparams RIGHTPAR block
    (62) function -> . VOID FUNC ID startscope_action LEFTPAR RIGHTPAR block
    (99) type -> . primitivetype
    (100) type -> . LIST LEFTHAT primitivetype RIGHTHAT
    (101) primitivetype -> . TINT
    (102) primitivetype -> . TFLOAT
    (103) primitivetype -> . TSTRING
    (104) primitivetype -> . TBOOL
    (105) primitivetype -> . TOBJECT

    MAIN            shift and go to state 17
    VOID            shift and go to state 8
    LIST            shift and go to state 10
    TINT            shift and go to state 11
    TFLOAT          shift and go to state 12
    TSTRING         shift and go to state 13
    TBOOL           shift and go to state 14
    TOBJECT         shift and go to state 15

    recfunc                        shift and go to state 16
    function                       shift and go to state 6
    type                           shift and go to state 7
    primitivetype                  shift and go to state 9

state 3

    (2) capi -> recfunc . MAIN COLON LEFTKEY start run RIGHTKEY SEMICOLON

    MAIN            shift and go to state 18


state 4

    (4) capi -> MAIN . COLON LEFTKEY start run RIGHTKEY SEMICOLON

    COLON           shift and go to state 19


state 5

    (5) global -> GLOBAL . COLON LEFTKEY vars RIGHTKEY SEMICOLON

    COLON           shift and go to state 20


state 6

    (66) recfunc -> function . recfunc
    (67) recfunc -> function .
    (66) recfunc -> . function recfunc
    (67) recfunc -> . function
    (59) function -> . type FUNC ID startscope_action LEFTPAR recparams RIGHTPAR block
    (60) function -> . type FUNC ID startscope_action LEFTPAR RIGHTPAR block
    (61) function -> . VOID FUNC ID startscope_action LEFTPAR recparams RIGHTPAR block
    (62) function -> . VOID FUNC ID startscope_action LEFTPAR RIGHTPAR block
    (99) type -> . primitivetype
    (100) type -> . LIST LEFTHAT primitivetype RIGHTHAT
    (101) primitivetype -> . TINT
    (102) primitivetype -> . TFLOAT
    (103) primitivetype -> . TSTRING
    (104) primitivetype -> . TBOOL
    (105) primitivetype -> . TOBJECT

    MAIN            reduce using rule 67 (recfunc -> function .)
    VOID            shift and go to state 8
    LIST            shift and go to state 10
    TINT            shift and go to state 11
    TFLOAT          shift and go to state 12
    TSTRING         shift and go to state 13
    TBOOL           shift and go to state 14
    TOBJECT         shift and go to state 15

    function                       shift and go to state 6
    recfunc                        shift and go to state 21
    type                           shift and go to state 7
    primitivetype                  shift and go to state 9

state 7

    (59) function -> type . FUNC ID startscope_action LEFTPAR recparams RIGHTPAR block
    (60) function -> type . FUNC ID startscope_action LEFTPAR RIGHTPAR block

    FUNC            shift and go to state 22


state 8

    (61) function -> VOID . FUNC ID startscope_action LEFTPAR recparams RIGHTPAR block
    (62) function -> VOID . FUNC ID startscope_action LEFTPAR RIGHTPAR block

    FUNC            shift and go to state 23


state 9

    (99) type -> primitivetype .

    FUNC            reduce using rule 99 (type -> primitivetype .)
    EQUAL           reduce using rule 99 (type -> primitivetype .)
    SEMICOLON       reduce using rule 99 (type -> primitivetype .)
    COMMA           reduce using rule 99 (type -> primitivetype .)
    RIGHTPAR        reduce using rule 99 (type -> primitivetype .)


state 10

    (100) type -> LIST . LEFTHAT primitivetype RIGHTHAT

    LEFTHAT         shift and go to state 24


state 11

    (101) primitivetype -> TINT .

    FUNC            reduce using rule 101 (primitivetype -> TINT .)
    RIGHTHAT        reduce using rule 101 (primitivetype -> TINT .)
    EQUAL           reduce using rule 101 (primitivetype -> TINT .)
    SEMICOLON       reduce using rule 101 (primitivetype -> TINT .)
    COMMA           reduce using rule 101 (primitivetype -> TINT .)
    RIGHTPAR        reduce using rule 101 (primitivetype -> TINT .)


state 12

    (102) primitivetype -> TFLOAT .

    FUNC            reduce using rule 102 (primitivetype -> TFLOAT .)
    RIGHTHAT        reduce using rule 102 (primitivetype -> TFLOAT .)
    EQUAL           reduce using rule 102 (primitivetype -> TFLOAT .)
    SEMICOLON       reduce using rule 102 (primitivetype -> TFLOAT .)
    COMMA           reduce using rule 102 (primitivetype -> TFLOAT .)
    RIGHTPAR        reduce using rule 102 (primitivetype -> TFLOAT .)


state 13

    (103) primitivetype -> TSTRING .

    FUNC            reduce using rule 103 (primitivetype -> TSTRING .)
    RIGHTHAT        reduce using rule 103 (primitivetype -> TSTRING .)
    EQUAL           reduce using rule 103 (primitivetype -> TSTRING .)
    SEMICOLON       reduce using rule 103 (primitivetype -> TSTRING .)
    COMMA           reduce using rule 103 (primitivetype -> TSTRING .)
    RIGHTPAR        reduce using rule 103 (primitivetype -> TSTRING .)


state 14

    (104) primitivetype -> TBOOL .

    FUNC            reduce using rule 104 (primitivetype -> TBOOL .)
    RIGHTHAT        reduce using rule 104 (primitivetype -> TBOOL .)
    EQUAL           reduce using rule 104 (primitivetype -> TBOOL .)
    SEMICOLON       reduce using rule 104 (primitivetype -> TBOOL .)
    COMMA           reduce using rule 104 (primitivetype -> TBOOL .)
    RIGHTPAR        reduce using rule 104 (primitivetype -> TBOOL .)


state 15

    (105) primitivetype -> TOBJECT .

    FUNC            reduce using rule 105 (primitivetype -> TOBJECT .)
    RIGHTHAT        reduce using rule 105 (primitivetype -> TOBJECT .)
    EQUAL           reduce using rule 105 (primitivetype -> TOBJECT .)
    SEMICOLON       reduce using rule 105 (primitivetype -> TOBJECT .)
    COMMA           reduce using rule 105 (primitivetype -> TOBJECT .)
    RIGHTPAR        reduce using rule 105 (primitivetype -> TOBJECT .)


state 16

    (1) capi -> global recfunc . MAIN COLON LEFTKEY start run RIGHTKEY SEMICOLON

    MAIN            shift and go to state 25


state 17

    (3) capi -> global MAIN . COLON LEFTKEY start run RIGHTKEY SEMICOLON

    COLON           shift and go to state 26


state 18

    (2) capi -> recfunc MAIN . COLON LEFTKEY start run RIGHTKEY SEMICOLON

    COLON           shift and go to state 27


state 19

    (4) capi -> MAIN COLON . LEFTKEY start run RIGHTKEY SEMICOLON

    LEFTKEY         shift and go to state 28


state 20

    (5) global -> GLOBAL COLON . LEFTKEY vars RIGHTKEY SEMICOLON

    LEFTKEY         shift and go to state 29


state 21

    (66) recfunc -> function recfunc .

    MAIN            reduce using rule 66 (recfunc -> function recfunc .)


state 22

    (59) function -> type FUNC . ID startscope_action LEFTPAR recparams RIGHTPAR block
    (60) function -> type FUNC . ID startscope_action LEFTPAR RIGHTPAR block

    ID              shift and go to state 30


state 23

    (61) function -> VOID FUNC . ID startscope_action LEFTPAR recparams RIGHTPAR block
    (62) function -> VOID FUNC . ID startscope_action LEFTPAR RIGHTPAR block

    ID              shift and go to state 31


state 24

    (100) type -> LIST LEFTHAT . primitivetype RIGHTHAT
    (101) primitivetype -> . TINT
    (102) primitivetype -> . TFLOAT
    (103) primitivetype -> . TSTRING
    (104) primitivetype -> . TBOOL
    (105) primitivetype -> . TOBJECT

    TINT            shift and go to state 11
    TFLOAT          shift and go to state 12
    TSTRING         shift and go to state 13
    TBOOL           shift and go to state 14
    TOBJECT         shift and go to state 15

    primitivetype                  shift and go to state 32

state 25

    (1) capi -> global recfunc MAIN . COLON LEFTKEY start run RIGHTKEY SEMICOLON

    COLON           shift and go to state 33


state 26

    (3) capi -> global MAIN COLON . LEFTKEY start run RIGHTKEY SEMICOLON

    LEFTKEY         shift and go to state 34


state 27

    (2) capi -> recfunc MAIN COLON . LEFTKEY start run RIGHTKEY SEMICOLON

    LEFTKEY         shift and go to state 35


state 28

    (4) capi -> MAIN COLON LEFTKEY . start run RIGHTKEY SEMICOLON
    (6) start -> . VOID FUNC START startscope_action LEFTPAR RIGHTPAR block

    VOID            shift and go to state 37

    start                          shift and go to state 36

state 29

    (5) global -> GLOBAL COLON LEFTKEY . vars RIGHTKEY SEMICOLON
    (8) vars -> . VAR recids COLON type EQUAL expression SEMICOLON vars
    (9) vars -> . VAR recids COLON type EQUAL expression SEMICOLON
    (10) vars -> . VAR recids COLON type SEMICOLON vars
    (11) vars -> . VAR recids COLON type SEMICOLON

    VAR             shift and go to state 39

    vars                           shift and go to state 38

state 30

    (59) function -> type FUNC ID . startscope_action LEFTPAR recparams RIGHTPAR block
    (60) function -> type FUNC ID . startscope_action LEFTPAR RIGHTPAR block
    (63) startscope_action -> .

    LEFTPAR         reduce using rule 63 (startscope_action -> .)

    startscope_action              shift and go to state 40

state 31

    (61) function -> VOID FUNC ID . startscope_action LEFTPAR recparams RIGHTPAR block
    (62) function -> VOID FUNC ID . startscope_action LEFTPAR RIGHTPAR block
    (63) startscope_action -> .

    LEFTPAR         reduce using rule 63 (startscope_action -> .)

    startscope_action              shift and go to state 41

state 32

    (100) type -> LIST LEFTHAT primitivetype . RIGHTHAT

    RIGHTHAT        shift and go to state 42


state 33

    (1) capi -> global recfunc MAIN COLON . LEFTKEY start run RIGHTKEY SEMICOLON

    LEFTKEY         shift and go to state 43


state 34

    (3) capi -> global MAIN COLON LEFTKEY . start run RIGHTKEY SEMICOLON
    (6) start -> . VOID FUNC START startscope_action LEFTPAR RIGHTPAR block

    VOID            shift and go to state 37

    start                          shift and go to state 44

state 35

    (2) capi -> recfunc MAIN COLON LEFTKEY . start run RIGHTKEY SEMICOLON
    (6) start -> . VOID FUNC START startscope_action LEFTPAR RIGHTPAR block

    VOID            shift and go to state 37

    start                          shift and go to state 45

state 36

    (4) capi -> MAIN COLON LEFTKEY start . run RIGHTKEY SEMICOLON
    (7) run -> . VOID FUNC RUN startscope_action LEFTPAR RIGHTPAR block

    VOID            shift and go to state 47

    run                            shift and go to state 46

state 37

    (6) start -> VOID . FUNC START startscope_action LEFTPAR RIGHTPAR block

    FUNC            shift and go to state 48


state 38

    (5) global -> GLOBAL COLON LEFTKEY vars . RIGHTKEY SEMICOLON

    RIGHTKEY        shift and go to state 49


state 39

    (8) vars -> VAR . recids COLON type EQUAL expression SEMICOLON vars
    (9) vars -> VAR . recids COLON type EQUAL expression SEMICOLON
    (10) vars -> VAR . recids COLON type SEMICOLON vars
    (11) vars -> VAR . recids COLON type SEMICOLON
    (12) recids -> . ID
    (13) recids -> . ID COMMA recids

    ID              shift and go to state 51

    recids                         shift and go to state 50

state 40

    (59) function -> type FUNC ID startscope_action . LEFTPAR recparams RIGHTPAR block
    (60) function -> type FUNC ID startscope_action . LEFTPAR RIGHTPAR block

    LEFTPAR         shift and go to state 52


state 41

    (61) function -> VOID FUNC ID startscope_action . LEFTPAR recparams RIGHTPAR block
    (62) function -> VOID FUNC ID startscope_action . LEFTPAR RIGHTPAR block

    LEFTPAR         shift and go to state 53


state 42

    (100) type -> LIST LEFTHAT primitivetype RIGHTHAT .

    FUNC            reduce using rule 100 (type -> LIST LEFTHAT primitivetype RIGHTHAT .)
    EQUAL           reduce using rule 100 (type -> LIST LEFTHAT primitivetype RIGHTHAT .)
    SEMICOLON       reduce using rule 100 (type -> LIST LEFTHAT primitivetype RIGHTHAT .)
    COMMA           reduce using rule 100 (type -> LIST LEFTHAT primitivetype RIGHTHAT .)
    RIGHTPAR        reduce using rule 100 (type -> LIST LEFTHAT primitivetype RIGHTHAT .)


state 43

    (1) capi -> global recfunc MAIN COLON LEFTKEY . start run RIGHTKEY SEMICOLON
    (6) start -> . VOID FUNC START startscope_action LEFTPAR RIGHTPAR block

    VOID            shift and go to state 37

    start                          shift and go to state 54

state 44

    (3) capi -> global MAIN COLON LEFTKEY start . run RIGHTKEY SEMICOLON
    (7) run -> . VOID FUNC RUN startscope_action LEFTPAR RIGHTPAR block

    VOID            shift and go to state 47

    run                            shift and go to state 55

state 45

    (2) capi -> recfunc MAIN COLON LEFTKEY start . run RIGHTKEY SEMICOLON
    (7) run -> . VOID FUNC RUN startscope_action LEFTPAR RIGHTPAR block

    VOID            shift and go to state 47

    run                            shift and go to state 56

state 46

    (4) capi -> MAIN COLON LEFTKEY start run . RIGHTKEY SEMICOLON

    RIGHTKEY        shift and go to state 57


state 47

    (7) run -> VOID . FUNC RUN startscope_action LEFTPAR RIGHTPAR block

    FUNC            shift and go to state 58


state 48

    (6) start -> VOID FUNC . START startscope_action LEFTPAR RIGHTPAR block

    START           shift and go to state 59


state 49

    (5) global -> GLOBAL COLON LEFTKEY vars RIGHTKEY . SEMICOLON

    SEMICOLON       shift and go to state 60


state 50

    (8) vars -> VAR recids . COLON type EQUAL expression SEMICOLON vars
    (9) vars -> VAR recids . COLON type EQUAL expression SEMICOLON
    (10) vars -> VAR recids . COLON type SEMICOLON vars
    (11) vars -> VAR recids . COLON type SEMICOLON

    COLON           shift and go to state 61


state 51

    (12) recids -> ID .
    (13) recids -> ID . COMMA recids

    COLON           reduce using rule 12 (recids -> ID .)
    COMMA           shift and go to state 62


state 52

    (59) function -> type FUNC ID startscope_action LEFTPAR . recparams RIGHTPAR block
    (60) function -> type FUNC ID startscope_action LEFTPAR . RIGHTPAR block
    (64) recparams -> . ID COLON type
    (65) recparams -> . ID COLON type COMMA recparams

    RIGHTPAR        shift and go to state 65
    ID              shift and go to state 63

    recparams                      shift and go to state 64

state 53

    (61) function -> VOID FUNC ID startscope_action LEFTPAR . recparams RIGHTPAR block
    (62) function -> VOID FUNC ID startscope_action LEFTPAR . RIGHTPAR block
    (64) recparams -> . ID COLON type
    (65) recparams -> . ID COLON type COMMA recparams

    RIGHTPAR        shift and go to state 67
    ID              shift and go to state 63

    recparams                      shift and go to state 66

state 54

    (1) capi -> global recfunc MAIN COLON LEFTKEY start . run RIGHTKEY SEMICOLON
    (7) run -> . VOID FUNC RUN startscope_action LEFTPAR RIGHTPAR block

    VOID            shift and go to state 47

    run                            shift and go to state 68

state 55

    (3) capi -> global MAIN COLON LEFTKEY start run . RIGHTKEY SEMICOLON

    RIGHTKEY        shift and go to state 69


state 56

    (2) capi -> recfunc MAIN COLON LEFTKEY start run . RIGHTKEY SEMICOLON

    RIGHTKEY        shift and go to state 70


state 57

    (4) capi -> MAIN COLON LEFTKEY start run RIGHTKEY . SEMICOLON

    SEMICOLON       shift and go to state 71


state 58

    (7) run -> VOID FUNC . RUN startscope_action LEFTPAR RIGHTPAR block

    RUN             shift and go to state 72


state 59

    (6) start -> VOID FUNC START . startscope_action LEFTPAR RIGHTPAR block
    (63) startscope_action -> .

    LEFTPAR         reduce using rule 63 (startscope_action -> .)

    startscope_action              shift and go to state 73

state 60

    (5) global -> GLOBAL COLON LEFTKEY vars RIGHTKEY SEMICOLON .

    MAIN            reduce using rule 5 (global -> GLOBAL COLON LEFTKEY vars RIGHTKEY SEMICOLON .)
    VOID            reduce using rule 5 (global -> GLOBAL COLON LEFTKEY vars RIGHTKEY SEMICOLON .)
    LIST            reduce using rule 5 (global -> GLOBAL COLON LEFTKEY vars RIGHTKEY SEMICOLON .)
    TINT            reduce using rule 5 (global -> GLOBAL COLON LEFTKEY vars RIGHTKEY SEMICOLON .)
    TFLOAT          reduce using rule 5 (global -> GLOBAL COLON LEFTKEY vars RIGHTKEY SEMICOLON .)
    TSTRING         reduce using rule 5 (global -> GLOBAL COLON LEFTKEY vars RIGHTKEY SEMICOLON .)
    TBOOL           reduce using rule 5 (global -> GLOBAL COLON LEFTKEY vars RIGHTKEY SEMICOLON .)
    TOBJECT         reduce using rule 5 (global -> GLOBAL COLON LEFTKEY vars RIGHTKEY SEMICOLON .)


state 61

    (8) vars -> VAR recids COLON . type EQUAL expression SEMICOLON vars
    (9) vars -> VAR recids COLON . type EQUAL expression SEMICOLON
    (10) vars -> VAR recids COLON . type SEMICOLON vars
    (11) vars -> VAR recids COLON . type SEMICOLON
    (99) type -> . primitivetype
    (100) type -> . LIST LEFTHAT primitivetype RIGHTHAT
    (101) primitivetype -> . TINT
    (102) primitivetype -> . TFLOAT
    (103) primitivetype -> . TSTRING
    (104) primitivetype -> . TBOOL
    (105) primitivetype -> . TOBJECT

    LIST            shift and go to state 10
    TINT            shift and go to state 11
    TFLOAT          shift and go to state 12
    TSTRING         shift and go to state 13
    TBOOL           shift and go to state 14
    TOBJECT         shift and go to state 15

    type                           shift and go to state 74
    primitivetype                  shift and go to state 9

state 62

    (13) recids -> ID COMMA . recids
    (12) recids -> . ID
    (13) recids -> . ID COMMA recids

    ID              shift and go to state 51

    recids                         shift and go to state 75

state 63

    (64) recparams -> ID . COLON type
    (65) recparams -> ID . COLON type COMMA recparams

    COLON           shift and go to state 76


state 64

    (59) function -> type FUNC ID startscope_action LEFTPAR recparams . RIGHTPAR block

    RIGHTPAR        shift and go to state 77


state 65

    (60) function -> type FUNC ID startscope_action LEFTPAR RIGHTPAR . block
    (14) block -> . COLON LEFTKEY recstatement RIGHTKEY SEMICOLON
    (15) block -> . COLON LEFTKEY RIGHTKEY SEMICOLON

    COLON           shift and go to state 79

    block                          shift and go to state 78

state 66

    (61) function -> VOID FUNC ID startscope_action LEFTPAR recparams . RIGHTPAR block

    RIGHTPAR        shift and go to state 80


state 67

    (62) function -> VOID FUNC ID startscope_action LEFTPAR RIGHTPAR . block
    (14) block -> . COLON LEFTKEY recstatement RIGHTKEY SEMICOLON
    (15) block -> . COLON LEFTKEY RIGHTKEY SEMICOLON

    COLON           shift and go to state 79

    block                          shift and go to state 81

state 68

    (1) capi -> global recfunc MAIN COLON LEFTKEY start run . RIGHTKEY SEMICOLON

    RIGHTKEY        shift and go to state 82


state 69

    (3) capi -> global MAIN COLON LEFTKEY start run RIGHTKEY . SEMICOLON

    SEMICOLON       shift and go to state 83


state 70

    (2) capi -> recfunc MAIN COLON LEFTKEY start run RIGHTKEY . SEMICOLON

    SEMICOLON       shift and go to state 84


state 71

    (4) capi -> MAIN COLON LEFTKEY start run RIGHTKEY SEMICOLON .

    $end            reduce using rule 4 (capi -> MAIN COLON LEFTKEY start run RIGHTKEY SEMICOLON .)


state 72

    (7) run -> VOID FUNC RUN . startscope_action LEFTPAR RIGHTPAR block
    (63) startscope_action -> .

    LEFTPAR         reduce using rule 63 (startscope_action -> .)

    startscope_action              shift and go to state 85

state 73

    (6) start -> VOID FUNC START startscope_action . LEFTPAR RIGHTPAR block

    LEFTPAR         shift and go to state 86


state 74

    (8) vars -> VAR recids COLON type . EQUAL expression SEMICOLON vars
    (9) vars -> VAR recids COLON type . EQUAL expression SEMICOLON
    (10) vars -> VAR recids COLON type . SEMICOLON vars
    (11) vars -> VAR recids COLON type . SEMICOLON

    EQUAL           shift and go to state 87
    SEMICOLON       shift and go to state 88


state 75

    (13) recids -> ID COMMA recids .

    COLON           reduce using rule 13 (recids -> ID COMMA recids .)


state 76
